--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
 
     <body>
         <div class="container" id="page-container">
-            <h1 id="app-name">
-                PhotoHelper
-            </h1>
-
+            <h1 id="app-name">PhotoHelper</h1>
             <h2 id="page-header" data-toggle="tooltip" data-placement="bottom" title="Upload an image, then click the generate button!" >
                 Find dominant colours and tags of your photos
             </h2>
@@ -43,9 +40,7 @@
             </div>
 
             <div class="row" id="my-row">
-                <div class ="col-md-3"> 
-                </div>
-
+                <div class ="col-md-3"></div>
                 <div class="col-md-6" id="col-id">
                     <div class="thumbnail" id="thumb-id">
                         <img id="selected-img" src="" alt="Uploaded image">
@@ -54,16 +49,11 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="col-md-3"> 
-                </div>
+                <div class="col-md-3"></div>
             </div>
 
             <button type="button" class="btn btn-info" id="thumbnailbtn">Generate data</button>
-
-            <div class="container" id="color-text">
-                    <!--Text area for displaying color results-->
-            </div>
+            <div class="container" id="color-text"><!--Text area for displaying color results--></div>
         </div>
         
         <div class="fb-share-button" data-href="http://photohelper.azurewebsites.net" data-layout="button" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fphotohelper.azurewebsites.net%2F&amp;src=sdkpreparse">Share</a></div>
